Increase smallest account fraction on ofx import from 3 to 4 decimals

BUG:388698
FIXED-IN:4.8.2